Oracle Academy ready some the top navbar configured

--- a/main_app/templates/main_app/base copy.html
+++ b/main_app/templates/main_app/base copy.html
@@ -10,8 +10,8 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
    <!-- site metas -->
-   <title>webwing</title>
-   <link rel="shortcut icon" href="{% static 'main_app/images/titleicon.gif' %}">
+   <title>Oracle Academy {% block title %}| Home {% endblock title %}</title>
+   <link rel="icon" href="{% static 'main_app/images/titleicon.png' %}">
    <meta name="keywords" content="">
    <meta name="description" content="">
    <meta name="author" content="">
@@ -43,7 +43,7 @@
 <body class="main-layout">
    <!-- loader  -->
    <div class="loader_bg">
-      <div class="loader"><img src="{% static 'main_app/images/loading.gif' %}" alt="#" /></div>
+      <div class="loader"><img src="{% static 'main_app/images/loading.gif' %}" alt="Page Loader" /></div>
    </div>
    <!-- end loader -->
    <!-- header -->
@@ -56,7 +56,7 @@
                   <div class="col-md-8 col-sm-8">
                      <ul class="lan">
                         <li><i class="fa fa-globe" aria-hidden="true"></i> Language : <img src="{% static 'main_app/images/fleg.png' %}"
-                              alt="#" /></li>
+                              alt="Flag" /></li>
                      </ul>
                      <form action="#">
                         <div class="select-box">
@@ -95,16 +95,16 @@
                <div class="row d_flex">
                   <div class="col-md-4 col-sm-4 d_none">
                      <ul class="conta_icon">
-                        <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> Call Us : +998 99 396-18-29</a>
+                        <li><a href="{% url 'home'  %}"><i class="fa fa-phone" aria-hidden="true"></i> Call Us : +998 99 396-18-29</a>
                         </li>
                      </ul>
                   </div>
                   <div class="col-md-4 col-sm-4 ">
-                     <a class="logo" href="/"><img src="{% static 'main_app/images/logo.png' %}" alt="#" /></a>
+                     <a class="logo" href="{% url 'home'  %}"><img src="{% static 'main_app/images/logo.png' %}" alt="Logo" /></a>
                   </div>
                   <div class="col-md-4 col-sm-4 d_none">
                      <ul class="conta_icon ">
-                        <li><a href="/"><i class="fa fa-envelope" aria-hidden="true"></i> sharipov.n1220@gmail.com</a> </li>
+                        <li><a href="{% url 'home'  %}"><i class="fa fa-envelope" aria-hidden="true"></i> sharipov.n1220@gmail.com</a> </li>
                      </ul>
                   </div>
                </div>
@@ -120,7 +120,7 @@
                <div class="row">
                   <div class="col-md-9 col-sm-7">
                      <nav class="navigation navbar navbar-expand-md navbar-dark ">
-                     <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        <button class="navbar-toggler" type="button" data-toggle="collapse"
                            data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false"
                            aria-label="Toggle navigation">
                            <span class="navbar-toggler-icon"></span>
@@ -176,48 +176,48 @@
          <div class="container">
             <div class="row">
                <div class="col-md-12">
-                  <a class="logo2" href="#"><img src="{% static 'main_app/images/loogo2.png' %}" alt="#" /></a>
+                  <a class="logo2" href="{% url 'home'  %}"><img src="{% static 'main_app/images/loogo2.png' %}" alt="#" /></a>
                </div>
                <div class="col-lg-5 col-md-6 col-sm-6">
                   <h3>Contact Us</h3>
                   <ul class="location_icon">
-                     <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Tashkent, Shaykhontohur District
+                     <li><a href="{% url 'about'  %}"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Tashkent, Shaykhontohur District
                         <br> Uzbekistan
                      </li>
-                     <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>sharipov.n1220@gmail.com<br></li>
-                     <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a>+998 99 396-18-29<br></li>
+                     <li><a href="{% url 'home'  %}"><i class="fa fa-envelope" aria-hidden="true"></i></a>sharipov.n1220@gmail.com<br></li>
+                     <li><a href="{% url 'home'  %}"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a>+998 99 396-18-29<br></li>
                   </ul>
                   <ul class="social_icon">
-                     <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
-                     <li> <a href="#"><i class="fa fa-telegram"></i></a></li>
-                     <li> <a href="#"><i class="fa fa-instagram"></i></a></li>
+                     <li> <a href="{% url 'home'  %}"><i class="fa fa-facebook-f"></i></a></li>
+                     <li> <a href="{% url 'home'  %}"><i class="fa fa-telegram"></i></a></li>
+                     <li> <a href="{% url 'home'  %}"><i class="fa fa-instagram"></i></a></li>
                   </ul>
                </div>
                <div class="col-lg-2 col-md-6 col-sm-6">
                   <h3>Menus</h3>
                   <ul class="link_icon">
-                     <li class="active"> <a href="base.html"> Home</a></li>
+                     <li class="active"> <a href="{% url 'home'  %}"> Home</a></li>
                      <li>
-                        <a href="about.html">
+                        <a href="{% url 'about'  %}">
                            </i>About Us
                      </li>
-                     <li> <a href="service.html"> </i>Services</a></li>
-                     <li> <a href="team.html"></i>Team</a></li>
-                     <li> <a href="client.html"></i>Clients</a></li>
-                     <li> <a href="contact.html"></i>Contact us</a></li>
+                     <!--<li> <a href="service.html"> </i>Services</a></li>-->
+                     <li> <a href="{% url 'team'  %}"></i>Team</a></li>
+                     <!--!<li> <a href="client.html"></i>Clients</a></li>
+                     <li> <a href="contact.html"></i>Contact us</a></li>-->
                   </ul>
                </div>
                <div class="col-lg-2 col-md-6 col-sm-6">
                   <h3>Recent Post</h3>
                   <ul class="link_icon">
-                     <li> <a href="#"> Participate in staff </a></li>
-                     <li>
+                     <li> <a href="{% url 'posts'  %}"> Participate in staff </a></li>
+                     <!--<li>
                         <a href="#">
                            meetings manage
                      </li>
                      <li> <a href="#"> dedicated to </a></li>
                      <li> <a href="#"> marketing</a></li>
-                     <li> <a href="#"> November 25, 2019</a></li>
+                     <li> <a href="#"> November 25, 2019</a></li>-->
                   </ul>
                </div>
                <div class="col-lg-3 col-md-6 col-sm-6">
