--- a/main_app/templates/main_app/base.html
+++ b/main_app/templates/main_app/base.html
@@ -50,27 +50,9 @@
    <header>
       <!-- header inner -->
       <div class="header">
-         <div class="header_to d_none">
-            <div class="container">
-               <div class="row">
-                  <div class="col-md-8 col-sm-8">
-                     <ul class="lan">
-                        <li><i class="fa fa-globe" aria-hidden="true"></i> Language : <img src="{% static 'main_app/images/fleg.png' %}"
-                              alt="Flag" /></li>
-                     </ul>
-                     <form action="#">
-                        <div class="select-box">
-                           <label for="select-box1" class="label select-box1"><span class="label-desc">Uzbek</span>
-                           </label>
-                           <select id="select-box1" class="select">
-                              <option value="Choice 1">Russian</option>
-                              <option value="Choice 1">English</option>
-                              <option value="Choice 1">Uzbek</option>
-                           </select>
-                        </div>
-                     </form>
-                  </div>
-                  <div class="col-md-4 col-sm-4 ">
+         <nav class="header_to d_none navigation navbar navbar-expand-md navbar-dark container-fluid">
+            <div class="container mb-1">
+                  <div class="col-md-12 col-lg-12 col-sm-12">
                      <ul class="social_icon1">
                         {% if user.is_authenticated %}
                            {% if request.user.is_staff %}<li><a href="{% url 'profile' %}">Memeber : {{user.username}}</a></li>
@@ -86,12 +68,11 @@
                         {% endif %}
                      </ul>
                   </div>
-               </div>
             </div>
-         </div>
+         </nav>
          <!-- header inner end-->
          <div class="header_midil">
-            <div class="container">
+            <div class="container mt-5">
                <div class="row d_flex">
                   <div class="col-md-4 col-sm-4 d_none">
                      <ul class="conta_icon">
@@ -120,7 +101,7 @@
                <div class="row">
                   <div class="col-md-9 col-sm-7">
                      <nav class="navigation navbar navbar-expand-md navbar-dark ">
-                     <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        <button class="navbar-toggler" type="button" data-toggle="collapse"
                            data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false"
                            aria-label="Toggle navigation">
                            <span class="navbar-toggler-icon"></span>
@@ -239,7 +220,7 @@
             <div class="container">
                <div class="row">
                   <div class="col-md-12">
-                     <p>© 2022 All Rights Reserved.OracleAcademy.uz</p>
+                     <p class="text-info">© 2022 All Rights Reserved.OracleAcademy.uz</p>
                   </div>
                </div>
             </div>
